<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>primitive_ctrl</name>
  <version>0.0.1</version>
  <description>Contains controller nodes for different motion primitives</description>
  <maintainer email="abhara13@asu.edu">abhara13</maintainer>
  <license>Apache License 2.0</license>

  <depend>ur-apt-dependency</depend>
  <!-- This refers to the 'ros-humble-ur' ROS2 APT metapackage mentioned 
  in rosdep.yaml. The instructions for the metapackage are given here: 
  https://docs.universal-robots.com/Universal_Robots_ROS2_Documentation/doc/ur_robot_driver/ur_robot_driver/doc/installation/installation.html
  The repo link is here: 
  https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/tree/humble
  -->
  <depend>ros2-control-dependencies</depend>
  <!--  This refers to the 'ros-humble-ros2-control' and the 'ros-humble-ros2-controllers'
  ROS2 APT metapackages mentioned in rosdep.yaml. The instructions are given here:
  https://control.ros.org/humble/doc/getting_started/getting_started.html
  -->
  <depend>casadi-pip-dependency</depend>
  <!-- This refers to the 'casadi' Python PIP package mentioned in rosdep.yaml.
  The instructions for this package: https://web.casadi.org/python-api/
  -->
  <depend>numpy-pip-dependency</depend>
  <!-- This refers to the 'numpy' Python PIP package mentioned in rosdep.yaml.
  -->
  <depend>pytransform3d-pip-dependency</depend>
  <!-- This refers to the 'pytransform3d' Python PIP package mentioned in rosdep.yaml.
  The instructions for this package: https://dfki-ric.github.io/pytransform3d/install.html
  -->


  <export>
    <rosdep>ur-apt-dependency</rosdep>
    <rosdep>ros2-control-dependencies</rosdep>
    <rosdep>casadi-pip-dependency</rosdep>
    <rosdep>numpy-pip-dependency</rosdep>
    <rosdep>pytransform3d-pip-dependency</rosdep>

    <build_type>ament_python</build_type>
  </export>


  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

</package>
